test/memory/shannon/memmaxExceeds.good
memmaxExceeds.chpl:1: error: Exceeded memory limit
